<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>xiuxian1</class>
 <widget class="QMainWindow" name="xiuxian1">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>600</width>
    <height>400</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>600</width>
    <height>400</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>600</width>
    <height>400</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>xiuxian</string>
  </property>
  <property name="styleSheet">
   <string notr="true"/>
  </property>
  <widget class="QWidget" name="centralWidget">
   <property name="styleSheet">
    <string notr="true">*{
	background:rgb(255, 255, 255);
	font-size:15px;
	font-family:Century Gothic,sans-serif;
}
QFrame{
	border:sold 10px rgba(0,0,0);
	
	background-image: url(:/xiuxian/images/backgroundlogin.jpg);
}
QLineEdit{
	color: #8d98a1;
	background-color:#405361;
	font-size:18px;
	border-style:outset;
	border-radius:10px;
}

QCheckBox{
	background:rgba(85,170,225,0);
	color:white;
}

QPushButton:pressed{
	background-color:#405361;
	border-style:inset;
}</string>
   </property>
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
      <x>-1</x>
      <y>-31</y>
      <width>600</width>
      <height>600</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
      <width>600</width>
      <height>600</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>600</width>
      <height>600</height>
     </size>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
    <widget class="QLineEdit" name="userEdit">
     <property name="geometry">
      <rect>
       <x>160</x>
       <y>110</y>
       <width>271</width>
       <height>51</height>
      </rect>
     </property>
     <property name="toolTipDuration">
      <number>0</number>
     </property>
     <property name="statusTip">
      <string/>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="placeholderText">
      <string>username</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="pwdEdit">
     <property name="geometry">
      <rect>
       <x>162</x>
       <y>180</y>
       <width>271</width>
       <height>51</height>
      </rect>
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Normal</enum>
     </property>
     <property name="placeholderText">
      <string>password</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="checkBox">
     <property name="geometry">
      <rect>
       <x>150</x>
       <y>260</y>
       <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>记住密码</string>
     </property>
    </widget>
    <widget class="QPushButton" name="loginBtn">
     <property name="geometry">
      <rect>
       <x>50</x>
       <y>300</y>
       <width>201</width>
       <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
	background:#ced1d8;
	border-style:outset;
	border-radius:10px;
}
QPushButton:pressed{
	background-color:#405361;
	border-style:inset;
}</string>
     </property>
     <property name="text">
      <string>Login</string>
     </property>
    </widget>
    <widget class="QPushButton" name="registerBtn">
     <property name="geometry">
      <rect>
       <x>290</x>
       <y>300</y>
       <width>201</width>
       <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
	background:#ced1d8;
	border-style:outset;
	border-radius:10px;
}
QPushButton:pressed{
	background-color:#405361;
	border-style:inset;
}
</string>
     </property>
     <property name="text">
      <string>Register</string>
     </property>
    </widget>
    <widget class="QPushButton" name="minBtn">
     <property name="geometry">
      <rect>
       <x>540</x>
       <y>30</y>
       <width>25</width>
       <height>25</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
       <width>25</width>
       <height>25</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>25</width>
       <height>25</height>
      </size>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
	image: url(:/xiuxian/images/min.png);
	border:none;
	background:transparent;
}
QPushButton:pressed{
	background-color:#405361;
	border-style:inset;
}
</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="closeBtn">
     <property name="geometry">
      <rect>
       <x>570</x>
       <y>30</y>
       <width>25</width>
       <height>25</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
       <width>25</width>
       <height>25</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>25</width>
       <height>25</height>
      </size>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
	image: url(:/xiuxian/images/close.png);
	border:none;
	background:transparent;
}
QPushButton:pressed{
	background-color:#405361;
	border-style:inset;
}
</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="fogetBtn">
     <property name="geometry">
      <rect>
       <x>320</x>
       <y>260</y>
       <width>151</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">border:none;
background:transparent;

background:rgba(85,170,225,0);
color:white;
font-style: italic bold;
font size:14px;
</string>
     </property>
     <property name="text">
      <string>Forget Password</string>
     </property>
    </widget>
   </widget>
  </widget>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
